--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@material-ui/core": "^4.0.0-rc.0",
     "expo": "^32.0.0",
     "react": "16.5.0",
+    "react-background-slideshow": "^1.0.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-maps": "^0.24.2",
+    "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0"
   },
   "devDependencies": {
