--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "@mapbox/polyline": "^1.1.0",
     "@material-ui/core": "^4.0.0-rc.0",
     "expo": "^32.0.0",
+    "native-base": "^2.12.1",
     "react": "16.5.0",
     "react-background-slideshow": "^1.0.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-drawer": "^2.5.1",
+    "react-native-elements": "^1.1.0",
+    "react-native-filesystem": "^0.1.0",
     "react-native-maps": "^0.24.2",
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0"
