--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@eva-design/eva": "^1.0.1",
     "@mapbox/polyline": "^1.1.0",
     "@material-ui/core": "^4.0.0-rc.0",
     "expo": "^32.0.0",
+    "expo-location": "^5.0.1",
     "native-base": "^2.12.1",
     "react": "16.5.0",
     "react-background-slideshow": "^1.0.4",
@@ -17,9 +19,17 @@
     "react-native-drawer": "^2.5.1",
     "react-native-elements": "^1.1.0",
     "react-native-filesystem": "^0.1.0",
+    "react-native-image-picker": "^1.0.1",
     "react-native-maps": "^0.24.2",
+    "react-native-modalbox": "^1.7.1",
+    "react-native-paper": "^2.16.0",
+    "react-native-photo-upload": "^1.3.0",
+    "react-native-side-drawer": "^1.1.7",
+    "react-native-splash-screen": "^3.2.0",
+    "react-native-ui-kitten": "^4.1.0",
     "react-native-vector-icons": "^6.5.0",
-    "react-navigation": "^3.11.0"
+    "react-navigation": "^3.11.0",
+    "react-navigation-material-bottom-tabs": "^1.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
